--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <video id="myVideo" autoplay muted playsinline>
-        <source src="1F_v0.4.0.mp4" type="video/mp4">
+        <source src="1F_V0.4.0.mp4" type="video/mp4">
         브라우저가 video 태그를 지원하지 않습니다.
     </video>
 
@@ -42,4 +42,5 @@
     </script>
 </body>
 </html>
+
 
